[EFL][WK2] White flicker when scrolling big pages with dark background on slower hardware. https://bugs.webkit.org/show_bug.cgi?id=102000

Patch by Viatcheslav Ostapenko <v.ostapenko@samsung.com> on 2012-11-14
Reviewed by Noam Rosenthal.

Add helper functions to clear viewport before painting. Those functions
used by EFL Webkit2 port to set view background to match page background
in order to reduce visibility of flicker during scrolling/scaling/repainting
where page tiles are not ready.

* platform/graphics/texmap/TextureMapper.h:
* platform/graphics/texmap/TextureMapperGL.cpp:
(WebCore::TextureMapperGL::drawSolidColor):
(WebCore):
* platform/graphics/texmap/TextureMapperGL.h:
* platform/graphics/texmap/TextureMapperImageBuffer.cpp:
(WebCore::TextureMapperImageBuffer::drawSolidColor):
(WebCore):
* platform/graphics/texmap/TextureMapperImageBuffer.h:

Canonical link: https://commits.webkit.org/120395@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134671 268f45cc-cd09-0410-ab3c-d52691b4dbfc